--- a/style.css
+++ b/style.css
@@ -73,30 +73,41 @@ body {
   height: 1026px;
   width: 100%;
   position: relative;
-  overflow: hidden;
 }
 
-.hero-title {
+.hero-text {
   position: absolute;
-  top: 50px;
+  top: 60px;
   left: 50px;
 }
 
-.hero-title img {
-  width: clamp(500px, 42.2vw, 810px);
-  height: clamp(157px, 13.3vw, 255px);
+.hero-title {
+  font-family: "ringold-sans", sans-serif;
+  font-size: 100px;
+  font-weight: 400;
+  color: #F3F4F6;
+  line-height: 0.95;
+}
+
+.hero-detail {
+  font-family: "articulat-cf", sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  font-style: italic;
+  color: #F3F4F6;
+  margin-left: 5px;
 }
 
 .hero-star {
-  position: absolute;
-  top: 50%;
-  right: clamp(50px, 9.3vw, 180px);
-  transform: translateY(-50%);
+  position: relative;
+  left: clamp(1px, calc(50vw + 100px), 1400px);
+  top: 70px;
+  width: 966px;
 }
 
 .hero-star img {
-  width: clamp(500px, 50.3vw, 966px);
-  height: clamp(455px, 45.8vw, 880px);
+  width: 100%;
+  height: 100%;
 }
 
 /* Latest Release Section */
@@ -125,7 +136,7 @@ body {
   height: 100%;
 }
 
-.release-info {
+.release-text {
   flex: 1;
   gap: 20px;
   display: flex;
@@ -137,7 +148,8 @@ body {
 .release-heading {
   font-family: "articulat-cf", sans-serif;
   font-weight: 1;
-  font-size: 28px;
+  font-size: 30px;
+  font-style: italic;
   color: #F3F4F6;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   z-index: 1;
@@ -161,7 +173,7 @@ body {
   margin-bottom: 10px;
 }
 
-.release-info p {
+.release-text p {
   font-family: "articulat-cf", sans-serif;
   font-size: 18px;
   color: #F3F4F6;
@@ -257,7 +269,7 @@ body {
     height: auto;
   }
 
-  .release-info {
+  .release-text {
     padding-right: 0;
     align-items: center;
     text-align: center;
@@ -280,7 +292,7 @@ body {
     font-size: clamp(24px, 4vw, 36px);
   }
 
-  .release-info p {
+  .release-text p {
     font-size: clamp(12px, 1.2vw, 16px);
     padding-left: 0;
     width: 20vw;
