--- a/style.css
+++ b/style.css
@@ -274,29 +274,37 @@ body {
 /* Footer Section */
 .footer {
   background-color: #0B1215;
-  height: 278px;
   width: 100%;
+  height: 278px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px 60px;
 }
 
 .footer-top {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
-  margin-bottom: 20px;
+  gap: 50px;
+  /* outline: 2px solid red; */
 }
 
 .footer-logo img {
   width: 414px;
-  height: 145px;
+  height: auto;
+}
+
+.footer-vertical-separator {
+  height: 122px;
+}
+
+.footer-vertical-separator img{
+  height: 100%;
 }
 
 .footer-nav {
   display: flex;
-  gap: 400px;
+  gap: 300px;
 }
 
 .footer-nav a {
@@ -310,22 +318,26 @@ body {
   color: #ccc;
 }
 
-.footer-separator img {
+.footer-horizontal-separator {
+  width: 95vw;
+  margin: 0 auto;
+}
+
+.footer-horizontal-separator img {
   width: 100%;
-  height: auto;
 }
 
 .footer-bottom {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
 }
 
 .footer-tagline {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 .footer-tagline p {
