readded changes that were lost

--- a/style.css
+++ b/style.css
@@ -274,37 +274,38 @@ body {
 /* Footer Section */
 .footer {
   background-color: #0B1215;
-  width: 100%;
   height: 278px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding: 20px 60px;
 }
 
 .footer-top {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  gap: 50px;
-  /* outline: 2px solid red; */
 }
 
 .footer-logo img {
   width: 414px;
-  height: auto;
+  height: 145px;
 }
 
 .footer-vertical-separator {
-  height: 122px;
+
 }
 
-.footer-vertical-separator img{
-  height: 100%;
+.footer-vertical-separator img {
+
 }
 
 .footer-nav {
   display: flex;
-  gap: 300px;
+  flex-direction: row;
+  gap: 200px;
 }
 
 .footer-nav a {
@@ -319,12 +320,11 @@ body {
 }
 
 .footer-horizontal-separator {
-  width: 95vw;
-  margin: 0 auto;
+
 }
 
 .footer-horizontal-separator img {
-  width: 100%;
+
 }
 
 .footer-bottom {
@@ -332,6 +332,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-top: 20px;
 }
 
 .footer-tagline {
