--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,11 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  position: relative;
+  position: fixed;
+  z-index: 1000;
   width: 100%;
   height: 110px;
+  transition: transform 0.3s ease;
 }
 
 .header .logo img {
@@ -65,6 +67,11 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.header-spacer {
+  height: 110px; /* Matches the header height */
+  width: 100%;
 }
 
 /* Hero Section */
@@ -212,12 +219,17 @@ body {
 }
 
 /* Merch Block */
+.merch-grid {
+  padding: 30px 0px;
+}
+
 .merch-block {
   position: relative;
   width: 425px;
   height: 425px;
   display: flex;
   flex-direction: column;
+  margin: 0px 30px;
 }
 
 .block-frame {
